--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@
     <p>We'll update here and notify in-app for big changes.</p>
     
     <h2>Contact Us</h2>
-    <p>For questions: <a href="https://x.com/DuskRavn">@DuskRavn on X</a> or email duskravn@example.com (replace with your real email).</p>
+    <p>For questions: <a href="https://x.com/DuskRavn">@DuskRavn on X</a> or email duskravn@com.com .</p>
 </body>
 </html>
